--- a/src/App.css
+++ b/src/App.css
@@ -27,9 +27,10 @@ h1 {
 
 .TodoWrapper {
   background: #1A1A40;
-  /* background: #0d0de0; */
-  margin-top: 5rem;
+  /* margin-top: 5rem; */
+  margin-top: 8rem;
   padding: 2rem;
+  padding: 8rem;
   border-radius: 5px;
 }
 
